@@ -1,5 +1,6 @@
 - Next version:
   * Add incremental decoding support for images containing ALPH and ICCP chunks.
+  * New function: WebPMuxGetCanvasSize
 
 - 3/20/13: version 0.3.0
   This is a binary compatible release.
